fix: adjust font size in code block for improved readability

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1379,7 +1379,7 @@ pre.code-block,
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow-x: auto;
-    font-size: 15px !important;
+    font-size: 13px !important;
     position: relative;
 }
 
